# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("cpp") {
  output_name = "content_service_cpp"

  public = [
    "view.h",
  ]

  sources = [
    "view.cc",
  ]

  defines = [ "IS_CONTENT_SERVICE_CPP_IMPL" ]

  public_deps = [
    "//base",
    "//services/content/public/mojom",
    "//url",
  ]
}
